[tool.poetry]
name = "qualibrate-runner"
version = "0.5.0"
description = ""
authors = ["Quantum Machines <info@quantum-machines.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
pydantic-settings = "^2.10.1"
click = "^8.1.7,<8.2.0"
tomli = { version = "^2.0.1", python = "<3.11" }
tomli-w = "^1.0.0"
jsonpatch = "^1.33"
qualibrate-core = "^0.5.0,<0.6.0"
qualibrate-config = "^0.1.8,<0.2.0"
websockets = "^15.0.1"
quam = "^0.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.13.1"
poethepoet = "^0.37.0"
qualibrate-core = {git = "https://github.com/qua-platform/qualibrate-core.git"}

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-mock = "^3.15.1"
freezegun = "^1.2.0"
xarray = "^2024.1.0"
quam-builder = {git = "https://github.com/qua-platform/quam-builder.git"}
#qualibration-libs = {path = "../qualibration-libs", develop = true}

#[tool.poetry.group.qm-dev.dependencies]
#qualibrate-config = {path = "../qualibrate-config", develop = true}
#qualibrate-core = {path = "../qualibrate-core", develop = true}

[tool.poetry.scripts]
qualibrate-runner = "qualibrate_runner.__main__:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["jsonpatch", "jsonpointer", "qualibration_libs.*", "qualang_tools.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py310"
exclude = ["calibrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.lint.pycodestyle]
max-line-length = 80
max-doc-length = 80

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format --check ."
format-fix = "ruff format ."
type = "mypy ."
check.sequence = ["lint", "format", "type"]
fix.sequence = ["lint-fix", "format-fix", "type"]
fix.ignore_fail = "return_non_zero"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
