[tool.poetry]
name = "qualibrate-backend"
version = "0.1.0"
description = ""
authors = ["Maxim V4S <maxim.d@v4scale.com>"]
repository = "https://github.com/qua-platform/qualibrate"
packages = [
    { include = "qualibrate" }
]
readme = "README.md"

include = [
    { path = "qualibrate_static/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic-settings = "^2.1.0"
click = "^8.1.7"
tomli = { version = "^2.0.1", python = "<3.11" }
tomli-w = "^1.0.0"
requests = "^2.31.0"
jsonpatch = "^1.33"

# TODO: replace after publishing or relases on gh
json-timeline-database = {path = "../../json-timeline-database", optional = true}

[tool.poetry.extras]
json-timeline-db = ["json-timeline-database"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.15"
types-requests = "^2.31.0.20240218"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
qualibrate = "qualibrate.__main__:main"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
exclude = ['tests/']

[[tool.mypy.overrides]]
# TODO: add py.typed to json_timeline_database and remove from ignore imports
module = ["jsonpatch", "jsonpointer", "json_timeline_database.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
